v1/docs/ModelsCertificateQuery.md
# ModelsCertificateQuery

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | Pointer to **int32** |  | [optional] 
**Name** | Pointer to **string** |  | [optional] 
**Description** | Pointer to **string** |  | [optional] 
**Automated** | Pointer to **bool** |  | [optional] 
**Content** | Pointer to **string** |  | [optional] 
**DuplicationField** | Pointer to **int32** |  | [optional] 
**ShowOnDashboard** | Pointer to **bool** |  | [optional] 
**Favorite** | Pointer to **bool** |  | [optional] 

## Methods

### NewModelsCertificateQuery

`func NewModelsCertificateQuery() *ModelsCertificateQuery`

NewModelsCertificateQuery instantiates a new ModelsCertificateQuery object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCertificateQueryWithDefaults

`func NewModelsCertificateQueryWithDefaults() *ModelsCertificateQuery`

NewModelsCertificateQueryWithDefaults instantiates a new ModelsCertificateQuery object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetId

`func (o *ModelsCertificateQuery) GetId() int32`

GetId returns the Id field if non-nil, zero value otherwise.

### GetIdOk

`func (o *ModelsCertificateQuery) GetIdOk() (*int32, bool)`

GetIdOk returns a tuple with the Id field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetId

`func (o *ModelsCertificateQuery) SetId(v int32)`

SetId sets Id field to given value.

### HasId

`func (o *ModelsCertificateQuery) HasId() bool`

HasId returns a boolean if a field has been set.

### GetName

`func (o *ModelsCertificateQuery) GetName() string`

GetName returns the Name field if non-nil, zero value otherwise.

### GetNameOk

`func (o *ModelsCertificateQuery) GetNameOk() (*string, bool)`

GetNameOk returns a tuple with the Name field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetName

`func (o *ModelsCertificateQuery) SetName(v string)`

SetName sets Name field to given value.

### HasName

`func (o *ModelsCertificateQuery) HasName() bool`

HasName returns a boolean if a field has been set.

### GetDescription

`func (o *ModelsCertificateQuery) GetDescription() string`

GetDescription returns the Description field if non-nil, zero value otherwise.

### GetDescriptionOk

`func (o *ModelsCertificateQuery) GetDescriptionOk() (*string, bool)`

GetDescriptionOk returns a tuple with the Description field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDescription

`func (o *ModelsCertificateQuery) SetDescription(v string)`

SetDescription sets Description field to given value.

### HasDescription

`func (o *ModelsCertificateQuery) HasDescription() bool`

HasDescription returns a boolean if a field has been set.

### GetAutomated

`func (o *ModelsCertificateQuery) GetAutomated() bool`

GetAutomated returns the Automated field if non-nil, zero value otherwise.

### GetAutomatedOk

`func (o *ModelsCertificateQuery) GetAutomatedOk() (*bool, bool)`

GetAutomatedOk returns a tuple with the Automated field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetAutomated

`func (o *ModelsCertificateQuery) SetAutomated(v bool)`

SetAutomated sets Automated field to given value.

### HasAutomated

`func (o *ModelsCertificateQuery) HasAutomated() bool`

HasAutomated returns a boolean if a field has been set.

### GetContent

`func (o *ModelsCertificateQuery) GetContent() string`

GetContent returns the Content field if non-nil, zero value otherwise.

### GetContentOk

`func (o *ModelsCertificateQuery) GetContentOk() (*string, bool)`

GetContentOk returns a tuple with the Content field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetContent

`func (o *ModelsCertificateQuery) SetContent(v string)`

SetContent sets Content field to given value.

### HasContent

`func (o *ModelsCertificateQuery) HasContent() bool`

HasContent returns a boolean if a field has been set.

### GetDuplicationField

`func (o *ModelsCertificateQuery) GetDuplicationField() int32`

GetDuplicationField returns the DuplicationField field if non-nil, zero value otherwise.

### GetDuplicationFieldOk

`func (o *ModelsCertificateQuery) GetDuplicationFieldOk() (*int32, bool)`

GetDuplicationFieldOk returns a tuple with the DuplicationField field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDuplicationField

`func (o *ModelsCertificateQuery) SetDuplicationField(v int32)`

SetDuplicationField sets DuplicationField field to given value.

### HasDuplicationField

`func (o *ModelsCertificateQuery) HasDuplicationField() bool`

HasDuplicationField returns a boolean if a field has been set.

### GetShowOnDashboard

`func (o *ModelsCertificateQuery) GetShowOnDashboard() bool`

GetShowOnDashboard returns the ShowOnDashboard field if non-nil, zero value otherwise.

### GetShowOnDashboardOk

`func (o *ModelsCertificateQuery) GetShowOnDashboardOk() (*bool, bool)`

GetShowOnDashboardOk returns a tuple with the ShowOnDashboard field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetShowOnDashboard

`func (o *ModelsCertificateQuery) SetShowOnDashboard(v bool)`

SetShowOnDashboard sets ShowOnDashboard field to given value.

### HasShowOnDashboard

`func (o *ModelsCertificateQuery) HasShowOnDashboard() bool`

HasShowOnDashboard returns a boolean if a field has been set.

### GetFavorite

`func (o *ModelsCertificateQuery) GetFavorite() bool`

GetFavorite returns the Favorite field if non-nil, zero value otherwise.

### GetFavoriteOk

`func (o *ModelsCertificateQuery) GetFavoriteOk() (*bool, bool)`

GetFavoriteOk returns a tuple with the Favorite field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetFavorite

`func (o *ModelsCertificateQuery) SetFavorite(v bool)`

SetFavorite sets Favorite field to given value.

### HasFavorite

`func (o *ModelsCertificateQuery) HasFavorite() bool`

HasFavorite returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


